--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
@@ -18,7 +19,8 @@
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-ui-lib": "^7.8.0"
+    "react-native-ui-lib": "^7.8.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
