--- a/app.json
+++ b/app.json
@@ -1,5 +1,14 @@
 {
   "expo": {
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
+        }
+      ],
+      "react-native-vision-camera"
+    ],
     "name": "AwesomeProject",
     "slug": "AwesomeProject",
     "version": "1.0.0",
